finished backend part

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /venv/
 token.txt
-/application/application/base.db
-application/application/__pycache__/
+/application/app/base.db
+application/app/__pycache__/
 application/tests/__pycache__/
 .idea
