--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -11,6 +11,7 @@ Flask-Script==2.0.6
 Flask-WTF==1.0.0
 forbiddenfruit==0.1.4
 greenlet==1.1.3
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
